; ModuleID = '/home/carl/AnghaBench/ccv/test/unit/extr_numeric.tests.c_dt_min1d.c'
source_filename = "/home/carl/AnghaBench/ccv/test/unit/extr_numeric.tests.c_dt_min1d.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dt_min1d(float* %0, float* %1, i32* %2, i32 %3, i32 %4, float %5, float %6) #0 {
  %8 = alloca float*, align 8
  %9 = alloca float*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca float, align 4
  %14 = alloca float, align 4
  store float* %0, float** %8, align 8
  store float* %1, float** %9, align 8
  store i32* %2, i32** %10, align 8
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store float %5, float* %13, align 4
  store float %6, float* %14, align 4
  %15 = load float*, float** %8, align 8
  %16 = load float*, float** %9, align 8
  %17 = load i32*, i32** %10, align 8
  %18 = load i32, i32* %11, align 4
  %19 = load i32, i32* %12, align 4
  %20 = sub nsw i32 %19, 1
  %21 = load i32, i32* %12, align 4
  %22 = sub nsw i32 %21, 1
  %23 = load float, float* %13, align 4
  %24 = load float, float* %14, align 4
  %25 = call i32 @dt_min_helper(float* %15, float* %16, i32* %17, i32 %18, i32 0, i32 %20, i32 0, i32 %22, float %23, float %24)
  ret void
}

declare dso_local i32 @dt_min_helper(float*, float*, i32*, i32, i32, i32, i32, i32, float, float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
